--- a/TravelExperience/TravelExperience/Views/OtherVenuesPage.xaml
+++ b/TravelExperience/TravelExperience/Views/OtherVenuesPage.xaml
@@ -4,10 +4,10 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="TravelExperience.Page1">
+             x:Class="TravelExperience.Views.OtherVenuesPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Welcome to OtherVenuesPage!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
