--- a/TravelExperience/TravelExperience/Views/RestaurantsPage.xaml
+++ b/TravelExperience/TravelExperience/Views/RestaurantsPage.xaml
@@ -4,13 +4,12 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="TravelExperience.MainPage">
-
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
-    </StackLayout>
-
+             x:Class="TravelExperience.Views.RestaurantsPage">
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Welcome to RestaurantsPage!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
