--- a/TravelExperience/TravelExperience/Views/MainViewPage.xaml
+++ b/TravelExperience/TravelExperience/Views/MainViewPage.xaml
@@ -7,7 +7,7 @@
              x:Class="TravelExperience.Views.MainViewPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Welcome to MainViewPage!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
