--- a/TravelExperience/TravelExperience/App.xaml
+++ b/TravelExperience/TravelExperience/App.xaml
@@ -6,6 +6,32 @@
              mc:Ignorable="d"
              x:Class="TravelExperience.App">
     <Application.Resources>
+        <ResourceDictionary>
+            
+                <Color x:Key="PrimaryColor">#2471A3</Color>
+                <Color x:Key="PrimaryWhite">#FFFFFF</Color>
+
+                <Style x:Key="PrimaryButton" TargetType="Button" >
+                    <Setter Property="BackgroundColor" Value="{StaticResource PrimaryColor}"></Setter>
+                    <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
+                </Style>
+                <Style x:Key="HeadingLabel" TargetType="Label">
+                    <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"></Setter>
+                    <Setter Property="FontSize" Value="Title"></Setter>
+                    <Setter Property="FontAttributes" Value="Bold"></Setter>
+                </Style>
+            <Style x:Key="HeadingCenterLabel" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"></Setter>
+                <Setter Property="FontSize" Value="Title"></Setter>
+                <Setter Property="FontAttributes" Value="Bold"></Setter>
+                <Setter Property="HorizontalOptions" Value="Center"></Setter>
+            </Style>
+            <Style x:Key="SubHeading" TargetType="Label">
+                    <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"></Setter>
+                    <Setter Property="FontSize" Value="Subtitle"></Setter>
+                    <Setter Property="FontAttributes" Value="Bold"></Setter>
+                </Style>
+            </ResourceDictionary>                
 
     </Application.Resources>
 </Application>
