Introduction to RSS feed

--- a/TravelExperience/TravelExperience/App.xaml
+++ b/TravelExperience/TravelExperience/App.xaml
@@ -7,15 +7,17 @@
              x:Class="TravelExperience.App">
     <Application.Resources>
         <ResourceDictionary>
+            <Color x:Key="darkColor">#000000</Color>
+            <Color x:Key="darkGrayColor">#404E5C</Color>
             
-                <Color x:Key="PrimaryColor">#2471A3</Color>
-                <Color x:Key="PrimaryWhite">#FFFFFF</Color>
+            <Color x:Key="PrimaryColor">#2471A3</Color>
+            <Color x:Key="PrimaryWhite">#FFFFFF</Color>
 
-                <Style x:Key="PrimaryButton" TargetType="Button" >
-                    <Setter Property="BackgroundColor" Value="{StaticResource PrimaryColor}"></Setter>
-                    <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
-                </Style>
-                <Style x:Key="HeadingLabel" TargetType="Label">
+            <Style x:Key="PrimaryButton" TargetType="Button" >
+                <Setter Property="BackgroundColor" Value="{StaticResource PrimaryColor}"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
+            </Style>
+            <Style x:Key="HeadingLabel" TargetType="Label">
                     <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"></Setter>
                     <Setter Property="FontSize" Value="Title"></Setter>
                     <Setter Property="FontAttributes" Value="Bold"></Setter>
@@ -31,7 +33,7 @@
                     <Setter Property="FontSize" Value="Subtitle"></Setter>
                     <Setter Property="FontAttributes" Value="Bold"></Setter>
                 </Style>
-            </ResourceDictionary>                
+        </ResourceDictionary>                
 
     </Application.Resources>
 </Application>
