--- a/TravelExperience/TravelExperience/Views/MainPage.xaml
+++ b/TravelExperience/TravelExperience/Views/MainPage.xaml
@@ -9,9 +9,9 @@
     <MasterDetailPage.Master>
         <ContentPage Title="Menu"
                      BackgroundColor="#e8e8e8">
-            <StackLayout Orientation="Vertical">
+            <StackLayout Orientation="Vertical" Margin="0">
                 <StackLayout>
-                    <Label Text="{Binding Header}" />
+                    
                     <Image Source="{Binding Image}" 
                            Aspect="Fill"
                            HeightRequest="200"/>
