--- a/TravelExperience/TravelExperience/App.xaml
+++ b/TravelExperience/TravelExperience/App.xaml
@@ -9,13 +9,26 @@
         <ResourceDictionary>
             <Color x:Key="darkColor">#000000</Color>
             <Color x:Key="darkGrayColor">#404E5C</Color>
+            <Color x:Key="LightGrayColor">#F2F3F4</Color>
             
             <Color x:Key="PrimaryColor">#2471A3</Color>
             <Color x:Key="PrimaryWhite">#FFFFFF</Color>
 
+            <Color x:Key="SecondaryColor">#FF5733</Color>
+            
             <Style x:Key="PrimaryButton" TargetType="Button" >
                 <Setter Property="BackgroundColor" Value="{StaticResource PrimaryColor}"></Setter>
                 <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
+            </Style>
+            <Style x:Key="PrimaryButtonRoundedCorner" TargetType="Button" >
+                <Setter Property="BackgroundColor" Value="{StaticResource PrimaryColor}"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
+                <Setter Property="CornerRadius" Value="20"></Setter>
+            </Style>
+            <Style x:Key="SecondaryButtonRoundedCorner" TargetType="Button" >
+                <Setter Property="BackgroundColor" Value="{StaticResource SecondaryColor}"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryWhite}"></Setter>
+                <Setter Property="CornerRadius" Value="20"></Setter>
             </Style>
             <Style x:Key="HeadingLabel" TargetType="Label">
                     <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"></Setter>
