--- a/TravelExperience/TravelExperience/Views/MainViewPage.xaml
+++ b/TravelExperience/TravelExperience/Views/MainViewPage.xaml
@@ -22,10 +22,15 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <ListView BindingContext="{StaticResource vm}"
+       <StackLayout>
+            <Label Text="Places you should visit"
+                   Style="{StaticResource HeadingCenterLabel}"
+                   Margin="20"/>
+            <ListView BindingContext="{StaticResource vm}"
                   SeparatorVisibility="None"
                   HasUnevenRows="true"
-                  ItemsSource="{Binding Blog.Channel.Items}">
+                  ItemsSource="{Binding Blog.Channel.Items}"
+                      >
             <ListView.Behaviors>
                 <behaviors:ListViewBehavior/>
             </ListView.Behaviors>
@@ -43,7 +48,7 @@
                                 <Label Text="{Binding Title}"
                                        Margin="20,0"
                                        Style="{StaticResource smallTitleLabel}"/>
-                                <Label Text="{Binding Creator}"
+                                    <Label Text="{Binding Creator, StringFormat='Posted By : {0:N}'}"
                                        Margin="20,0,20,10"
                                        Style="{StaticResource normalLabel}"/>
                                
@@ -53,5 +58,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
